<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_app_name">Pic Amazement</string>
    <string name="common_lblAreYouSure">Are you sure?</string>
    <string name="common_lblInputText">Input value</string>
    <string name="common_lblInputTextTip">Your value here</string>
    <string name="common_btnYes">Yes</string>
    <string name="common_btnOk">Ok</string>
    <string name="common_btnCancel">Cancel</string>

    <string name="main_mnuSettings">Settings</string>
    <string name="main_mnuAbout">About</string>
    <string name="main_tabPictures">New Pictures</string>
    <string name="main_tabSaved">Saved</string>

    <string name="piclist_mnuRefresh">Refresh</string>
    <string name="picList_mnuSettings">Settings</string>
    <string name="piclist_mnuSendToWatch">Send to Wear</string>
    <string name="piclist_mnuHideHelp">Hide a pic</string>
    <string name="piclist_mnuHideAllVisibleNotUploaded">Hide all pics</string>

    <string name="fullscreen_actTitle">Fullscreen picture</string>
    <string name="fullscreen_btnDelete">Delete</string>
    <string name="fullscreen_btnSave">Save</string>
    <string name="fullscreen_btnSendToWear">Wear</string>

    <string name="settings_actTitle">App Settings</string>

    <string name="dropboxsettings_actTitle">Dropbox Settings</string>
    <string name="dropboxsettings_chkSaveToThisStorage">Enable Dropbox for saving pictures</string>
    <string name="dropboxsettings_btnStartAuth">Access to Dropbox</string>
    <string name="dropboxsettings_lblSaveDirCaption">Current saving location</string>
    <string name="dropboxsettings_btnSelectSaveDir">Select save path</string>
    <string name="dropboxsettings_btnAuthDone">Dropbox connected</string>

    <string name="twittersettings_actTitle">Twitter Settings</string>
    <string name="twittersettings_lblAccounts">Twitter account where fetching images</string>
    <string name="twittersettings_btnRemoveAccount">Remove selected</string>
    <string name="twittersettings_btnAddAccount">Add account</string>
    <string name="twittersettings_msgSelectAccountFirst">First, select an account to delete</string>
    <string name="twittersettings_msgAddAccountPrompt">New account to add</string>
    <string name="twittersettings_msgAddAccountTip">Enter a Twitter account</string>
    <string name="twittersettings_msgDuplicatedAccount">Account already exists</string>
    <string name="twittersettings_chkEnable">Enable Twitter sources</string>

    <string name="onebigpicturesettings_actTitle">One Big Picture Settings</string>
    <string name="onebigpicturesettings_chkEnable">Enable OneBigPicture provider</string>

    <string name="pref_debug_title">DEBUG</string>
    <string name="pref_debug_summary">Debug options, generally you should ignore this section</string>
    <string name="pref_debug_section_title">Open debug options</string>
    <string name="pref_image_title">IMAGES</string>
    <string name="pref_image_summary">Configure scrapers, storage etc.</string>

    <string name="debugsettings_actTitle">Debug Options</string>
    <string name="debugsettings_btnResetSyncInProgress">Reset sync in progress flag</string>
    <string name="debugsettings_msgResetSyncStatus">Sync in progress flag resetted</string>
    <string name="debugsettings_btnClearDatabase">Delete pictures database</string>
    <string name="title_activity_main_container">MainContainerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fullscreen_btnShare">Share</string>

</resources>
