<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PictureListActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"

>
    <item
        android:id="@+id/piclist_mnuRefresh"
        android:title="@string/piclist_mnuRefresh"
        app:showAsAction="withText|ifRoom"
        />
    <item
        android:id="@+id/piclist_mnuSendToWatch"
        android:title="@string/piclist_mnuSendToWatch"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/piclist_mnuHideHelp"
        android:title="@string/piclist_mnuHideHelp"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/picList_mnuSettings"
        android:title="@string/main_mnuSettings"
        android:orderInCategory="100"
        app:showAsAction="never"
    />
</menu>
