<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_layBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="it.rainbowbreeze.picama.ui.FullscreenPictureActivity"
>
    <!-- The background color has to be specified, otherwise Picasso has issue, like
         random repeat of the image in the background etc...
     -->

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <!-- If the image is loaded with Picasso, remember to set .fit().centerInside() and use center
          as scaleType or not set scaleType at all
         If image is not loaded using Picasso, or loaded using it but without the
          .fit().centerInside(), use fitCenter as scaleType, especially for Twitter source
          where images are generally smalled (in pixel) than a xxdpi display
         To see the image at original size, use center and don't use any resizing
          method in Picasso
    -->

    <!--
    https://github.com/sephiroth74/ImageViewZoom
    -->
    <it.sephiroth.android.library.imagezoom.ImageViewTouch
        android:id="@+id/fullscreen_imgPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent"
        >

            <TextView
                android:id="@+id/fullscreen_lblDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="?metaButtonBarButtonStyle"
                android:padding="10dp"
                android:gravity="center"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            >
                <Button
                    android:id="@+id/fullscreen_btnSave"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_action_save"
                    android:text="@string/fullscreen_btnSave"
                />
                <Button
                    android:id="@+id/fullscreen_btnDelete"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_action_delete"
                    android:text="@string/fullscreen_btnDelete"
                />
                <Button
                    android:id="@+id/fullscreen_btnSendToWear"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fullscreen_btnSendToWear"
                />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
